@@ -1,2 +1,2 @@
-/Dancer-Plugin-Deferred*
+/Dancer2-Plugin-Deferred*
 .build
