@@ -1,4 +1,4 @@
-name    = Dancer-Plugin-Deferred
+name    = Dancer2-Plugin-Deferred
 author  = David Golden <dagolden@cpan.org>
 license = Apache_2_0
 copyright_holder = David Golden
@@ -8,5 +8,5 @@ copyright_year   = 2012
 :version = 0.032
 AutoMetaResources.bugtracker.rt = 0
 AutoMetaResources.bugtracker.github = user:dagolden
+stopwords = Krotkine
 stopwords = mst
-
