@@ -1,6 +1,12 @@
-Revision history for Dancer-Plugin-Deferred
+Revision history for Dancer2-Plugin-Deferred
 
 {{$NEXT}}
+
+  [CHANGED]
+
+  - Forked into Dancer2::Plugin::Deferred for proper Dancer2 support
+
+***** Previous history applies to Dancer::Plugin::Deferred *****
 
 0.003     2012-12-26 11:31:06 America/New_York
 
